// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`entities /api/entities/count_by_template should have a validation schema 1`] = `
Object {
  "properties": Object {
    "query": Object {
      "properties": Object {
        "templateId": Object {
          "type": "string",
        },
      },
      "required": Array [
        "templateId",
      ],
      "type": "object",
    },
  },
  "required": Array [
    "query",
  ],
  "type": "object",
}
`;

exports[`entities DELETE /api/entities should have a validation schema 1`] = `
Object {
  "properties": Object {
    "query": Object {
      "properties": Object {
        "sharedId": Object {
          "type": "string",
        },
      },
      "required": Array [
        "sharedId",
      ],
      "type": "object",
    },
  },
  "required": Array [
    "query",
  ],
  "type": "object",
}
`;

exports[`entities POST /api/entities/bulkdelete should have a validation schema 1`] = `
Object {
  "properties": Object {
    "body": Object {
      "properties": Object {
        "sharedIds": Object {
          "items": Object {
            "type": "string",
          },
          "type": "array",
        },
      },
      "required": Array [
        "sharedIds",
      ],
      "type": "object",
    },
  },
  "required": Array [
    "body",
  ],
  "type": "object",
}
`;
